--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo" id="pecup">PEC.UP</a>
+            <a href="https://work.pecup.in" class="logo" id="pecup">PEC.UP <span style="font-size: 0.4em;">for DS</span></a>
             <button class="menu-toggle" aria-label="Toggle navigation">
                 &#9776; <!-- Hamburger icon -->
             </button>
@@ -82,10 +82,10 @@
             <div class="animated-text">
                 <h1 id="typing-heading"></h1>
             </div>
-            <a href="https://forms.gle/8vJmS1meyBkLfrJF9" class="btn-project">feedback!!</a>
+            <a href="#resources" class="btn-project">resources?</a>
 
             <p class="centered-text">pickup by
-                <span class="pickup">PEC.UP</span>
+                <span class="pickup">PEC.UP <span style="font-size: 0.5em;">for DS</span</span>
             </p>
         </div>
     </section>
@@ -710,7 +710,7 @@
     </footer>
 
     <script>
-        const texts = [ "Its Time for PEC.UP's Feedback..","Bored with studies? Not anymore!","resources that are actually useful", "Made for students, by students!"];
+        const texts = [ "DS Branch's PEC.UP","Bored with studies? Not anymore!","resources that are actually useful", "Made for students, by students!"];
         let count = 0;
         let index = 0;
         let currentText = '';
